Docker connection work + API REST CRUD works
